TAIGA-18 Bind IDs with objects (#16)
* Disable ID in constructor for FootballClub

* Make IDs private while creating Competition and CompetitionRound

* Removed unused annotation in FootballMatch

* Add competition-related IDs to CompetitionRound object

* Add competition-related IDs to FootballMatch object

* Add football match Id to FootballMatchStatistics object