@@ -10,6 +10,7 @@ import com.roumada.swiftscore.model.match.FootballMatchStatistics;
 import com.roumada.swiftscore.persistence.CompetitionDataLayer;
 import com.roumada.swiftscore.persistence.FootballClubDataLayer;
 import com.roumada.swiftscore.util.FootballClubTestUtils;
+import com.roumada.swiftscore.util.PersistenceTestUtils;
 import org.json.JSONArray;
 import org.json.JSONObject;
 import org.junit.jupiter.api.DisplayName;
@@ -43,13 +44,14 @@ class CompetitionControllerTests extends AbstractBaseIntegrationTest {
     @DisplayName("Create competition - with valid football club IDs - should create")
     void createCompetition_validData_isCreated() throws Exception {
         // arrange
-        fcdl.saveAll(FootballClubTestUtils.getFourFootballClubs());
+        var ids = PersistenceTestUtils.getIdsOfSavedClubs(
+                fcdl.saveAll(FootballClubTestUtils.getFourFootballClubs()));
 
         // act
         var mvcResult = mvc.perform(post("/competition").contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(new CompetitionRequestDTO(
-                                List.of(1L, 2L, 3L, 4L),
-                                0.0f))))
+                                ids,
+                                0.0))))
                 .andExpect(status().isOk())
                 .andReturn();
 
@@ -71,7 +73,7 @@ class CompetitionControllerTests extends AbstractBaseIntegrationTest {
         mvc.perform(post("/competition").contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(new CompetitionRequestDTO(
                                 List.of(1L, 2L, 3L, 9L),
-                                0.0f))))
+                                0.0))))
                 .andExpect(status().is4xxClientError());
     }
 
@@ -85,7 +87,7 @@ class CompetitionControllerTests extends AbstractBaseIntegrationTest {
         mvc.perform(post("/competition").contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(new CompetitionRequestDTO(
                                 List.of(1L, 2L, 3L),
-                                0.0f))))
+                                0.0))))
                 .andExpect(status().is4xxClientError());
     }
 
@@ -104,13 +106,14 @@ class CompetitionControllerTests extends AbstractBaseIntegrationTest {
     }
 
     @Test
-    @DisplayName("Get a competitions - with valid ID - should return")
+    @DisplayName("Get a competition - with valid ID - should return")
     void getCompetition_withValidID_shouldReturn() throws Exception {
         // arrange
-        var round1 = new CompetitionRound(1L, 1, Collections.emptyList());
-        compdl.saveCompetitionRound(round1);
-        var id = compdl.saveCompetition(new Competition(FootballClubTestUtils.getFourFootballClubs(),
-                List.of(round1), 0.0f)).getId();
+        var round1 = new CompetitionRound(1, Collections.emptyList());
+        round1 = compdl.saveCompetitionRound(round1);
+        var saved = fcdl.saveAll(FootballClubTestUtils.getFourFootballClubs());
+        var id = compdl.saveCompetition(new Competition(0.0, saved,
+                List.of(round1))).getId();
 
         // act
         var result = mvc.perform(get("/competition/" + id))
@@ -128,10 +131,11 @@ class CompetitionControllerTests extends AbstractBaseIntegrationTest {
     @DisplayName("Get a competitions - with invalid ID - should return error code")
     void getCompetition_withInvalidID_shouldReturnErrorCode() throws Exception {
         // arrange
-        var round1 = new CompetitionRound(1L, 1, Collections.emptyList());
+        var round1 = new CompetitionRound(1, Collections.emptyList());
         compdl.saveCompetitionRound(round1);
-        compdl.saveCompetition(new Competition(FootballClubTestUtils.getFourFootballClubs(),
-                List.of(round1), 0.0f));
+        var saved = fcdl.saveAll(FootballClubTestUtils.getFourFootballClubs());
+        compdl.saveCompetition(new Competition(0.0, saved,
+                List.of(round1)));
 
         // act
         mvc.perform(get("/competition/999"))
@@ -142,14 +146,15 @@ class CompetitionControllerTests extends AbstractBaseIntegrationTest {
     @DisplayName("Get all competitions - should return")
     void getAllCompetitions_shouldReturnAll() throws Exception {
         // arrange
-        var round1 = new CompetitionRound(1L, 1, Collections.emptyList());
-        var round2 = new CompetitionRound(2L, 1, Collections.emptyList());
+        var round1 = new CompetitionRound(1, Collections.emptyList());
+        var round2 = new CompetitionRound(1, Collections.emptyList());
         compdl.saveCompetitionRound(round1);
         compdl.saveCompetitionRound(round2);
-        compdl.saveCompetition(new Competition(FootballClubTestUtils.getFourFootballClubs(),
-                List.of(round1), 0.0f));
-        compdl.saveCompetition(new Competition(FootballClubTestUtils.getFourFootballClubs(),
-                List.of(round2), 0.0f));
+        var savedClubs = fcdl.saveAll(FootballClubTestUtils.getFourFootballClubs());
+        compdl.saveCompetition(new Competition(0.0, savedClubs,
+                List.of(round1)));
+        compdl.saveCompetition(new Competition(0.0, savedClubs,
+                List.of(round2)));
 
         // act
         var result = mvc.perform(get("/competition/all"))
@@ -167,19 +172,19 @@ class CompetitionControllerTests extends AbstractBaseIntegrationTest {
     @DisplayName("Simulate competition  - is still simulable - should simulate and return simulated round")
     void simulateCompetitionRound_isStillSimulable_shouldSimulateAndReturn() throws Exception {
         // arrange
-        var fc1 = FootballClub.builder().id(1L).name("FC1").victoryChance(0.3f).build();
-        var fc2 = FootballClub.builder().id(2L).name("FC2").victoryChance(0.4f).build();
+        var fc1 = FootballClub.builder().name("FC1").victoryChance(0.3f).build();
+        var fc2 = FootballClub.builder().name("FC2").victoryChance(0.4f).build();
         fcdl.save(fc1);
         fcdl.save(fc2);
 
-        var round = new CompetitionRound(1L, 1,
+        var round = new CompetitionRound(null, 1,
                 List.of(new FootballMatch(
                         new FootballMatchStatistics(fc1),
                         new FootballMatchStatistics(fc2))));
         compdl.saveCompetitionRound(round);
 
-        var saved = compdl.saveCompetition(new Competition(
-                List.of(fc1, fc2), List.of(round), 0));
+        var saved = compdl.saveCompetition(new Competition(0,
+                List.of(fc1, fc2), List.of(round)));
 
         // act
         var response = mvc.perform(get("/competition/%s/simulate".formatted(saved.getId())))
@@ -201,19 +206,19 @@ class CompetitionControllerTests extends AbstractBaseIntegrationTest {
     @DisplayName("Simulate competition  - is originally simulable - should return error code when no longer simulable")
     void simulateCompetitionRound_isOriginallySimulable_shouldReturnErrorCodeWhenNoLongerSimulable() throws Exception {
         // arrange
-        var fc1 = FootballClub.builder().id(1L).name("FC1").victoryChance(0.3f).build();
-        var fc2 = FootballClub.builder().id(2L).name("FC2").victoryChance(0.4f).build();
+        var fc1 = FootballClub.builder().name("FC1").victoryChance(0.3f).build();
+        var fc2 = FootballClub.builder().name("FC2").victoryChance(0.4f).build();
         fcdl.save(fc1);
         fcdl.save(fc2);
 
-        var round = new CompetitionRound(1L, 1,
+        var round = new CompetitionRound(1,
                 List.of(new FootballMatch(
                         new FootballMatchStatistics(fc1),
                         new FootballMatchStatistics(fc2))));
         compdl.saveCompetitionRound(round);
 
-        var saved = compdl.saveCompetition(new Competition(
-                List.of(fc1, fc2), List.of(round), 0));
+        var saved = compdl.saveCompetition(new Competition(0,
+                List.of(fc1, fc2), List.of(round)));
 
         // act
         mvc.perform(get("/competition/%s/simulate".formatted(saved.getId())))
